--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 		"not dead"
 	],
 	"dependencies": {
+		"98.css": "^0.1.20",
 		"concurrently": "^8.2.2",
 		"core-js": "^3.31.1",
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"jquery": "^3.7.0",
+		"leaflet": "^1.9.4",
 		"mongoose": "^8.1.1",
 		"normalize.css": "^8.0.1",
 		"regenerator-runtime": "^0.13.11",
