--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"98.css": "^0.1.20",
 		"concurrently": "^8.2.2",
 		"core-js": "^3.31.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"jquery": "^3.7.0",
