--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
 		"not dead"
 	],
 	"dependencies": {
+		"@interactjs/actions": "^1.10.26",
+		"@interactjs/auto-start": "^1.10.26",
+		"@interactjs/dev-tools": "^1.10.26",
+		"@interactjs/interact": "^1.10.26",
+		"@interactjs/modifiers": "^1.10.26",
 		"@turf/turf": "^6.5.0",
 		"98.css": "^0.1.20",
 		"concurrently": "^8.2.2",
