--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"normalize.css": "^8.0.1",
 		"regenerator-runtime": "^0.13.11",
 		"semver": "^7.5.4",
-		"underscore": "^1.13.6"
+		"underscore": "^1.13.6",
+		"xterm": "^5.3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.8",
